# fast

./: .dockerignore  .gitignore  Makefile  Procfile  docker-compose.yml  heroku.yml  local.env  pyproject.toml  readme.md  tree.html
app/: Dockerfile  Procfile  alebic.ini  app.sh  app_reload.sh  database.db  env_config.py  fast_api_load.py  main.py  requirements-dev.txt  requirements.txt
app/alembic/: env.py
app/connectors/: openweather_connector.py
app/controllers/: user_controller.py
app/dto/: weather_dto.py
app/infrastructure/: database.py  security.py  weather_cache.py
app/managers/: user_manager.py
app/models/: __init__.py  locations_model.py  report_model.py  users.py
app/routers/: __init__.py  basic.py  health.py  home.py  report.py  songs.py  weather.py
app/services/: location_service.py  report_service.py
app/templates/home/: index.html
app/tests/: conftest.py
app/tests/helpers/: payloads.py
app/tests/integration/: test_report.py
app/tests/unit/: test_root_endpoint.py
app/utils/: base_async_connector.py  base_connector.py  db.py  logger.py
