[project]
name = "fast_api_starter"
version = "0.1.0"
description = "Fast API template start."
authors = [
    "Marcel Bittar"
]
license = "MIT"
readme = "README.md"
python = "^3.9"
homepage = "https://mabittar.github.io/"
repository = "https://github.com/mabittar/fast"
documentation = "https://github.com/mabittar/fast"

keywords = ["template", "fastapi", ]

classifiers = [
    "Topic :: Backend Development"
]


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88


[tool.poetry]
name = "fast_api_starter"
version = "0.1.0"
description = "Fast API template start"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.11.3"
fastapi = "^0.54.1"
pydantic = "^1.4"
gunicorn = "^20.0.4"
jinja2 = "^2.11.2"
psycopg2-binary = "^2.8.5"
alembic = "^1.4.2"
sqlalchemy = "^1.3.16"
mypy = "^0.770"
black = "^19.10b0"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.15.1"
pytest-watch = "^4.2.0"
python-dotenv= "0.19.0"
pytest-cov = "^2.8.1"
trio = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
